<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/artwork"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/favoriteToggle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:background="@null"
            android:contentDescription="@string/favorite_toggle_button"
            tools:src="@drawable/ic_star_off_30dp" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/trackName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.75"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:text="@string/default_track_name"
            android:textStyle="bold"
            app:autoSizeMinTextSize="24sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/collectionName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:paddingTop="3dp"
            android:text="@string/default_collection_name"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:paddingBottom="6dp"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:text="@string/default_artist_name"
            android:textStyle="bold"
            app:autoSizeMinTextSize="18sp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>